--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .page{
     min-width: 1100px;
     max-width: 1600px;
-    background-color:#f2f2f2; 
+    background-color:#f2f2f2;
     font-family: 'Helvetica Neue', 'Arial', sans-serif;
     margin: auto;
 }
@@ -171,9 +171,9 @@
  .feynman {
     background-color:#f2f2f2;
     display: flex;
-    flex-direction: column; 
-    height: 890px; 
-    margin-top: 0 px;
+    flex-direction: column;
+    height: 890px;
+    margin-top: 0;
     position: relative;
 }
 
@@ -192,7 +192,6 @@
     font-size: 36px;
     font-weight: normal;
     text-align: center;
-    z-index: 2;
     margin:0 auto; 
     z-index: 1;     
 }
