--- a/style.css
+++ b/style.css
@@ -1,19 +1,26 @@
-.page{
+.page {
     min-width: 1100px;
     max-width: 1600px;
-    background-color:#f2f2f2;
     font-family: 'Helvetica Neue', 'Arial', sans-serif;
-    margin: auto;
+    margin: 0 auto;
 }
 
-.header{
+.header {
     min-height: 600px;
     max-height: 756px;
     display: flex;
     height: 100vh;
-    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     overflow: hidden;
     position: relative;
+    background-color: #f2f2f2;
+
+}
+
+.header__link {
+    text-decoration: none;
+    color: #2f80ed;
 }
 
 
@@ -22,45 +29,49 @@
     width: 228px;
 }
 
-.logo__place_header {
+.logo_place_header {
     background-image: url(./images/logo_place_header.svg);
     position: absolute;
     left: 64px;
     top: 30px;
     z-index: 1;
     background-repeat: no-repeat;
+
 }
-         
+
 .header__title {
-    display: flex;
-    line-height:96px;
-    font-size:102px;
-    font-weight:600;
+    line-height: 96px;
+    font-size: 102px;
+    font-weight: 600;
     width: 730px;
-    margin-left:64px;
-    position: relative;
-    z-index: 1;
+    z-index: 2;
+    margin: 0 0 0 64px;
+    padding: 0;
+
 }
- 
+
 .header__main-illustration {
     position: absolute;
     right: 0;
-    bottom:0;
+    bottom: 0;
     width: 765px;
     height: 608px;
+    z-index: 1;
 }
-    
+
 .header__subtitle {
-    line-height:25px;
+    line-height: 25px;
     font-size: 18px;
-    font-weight:normal;
+    font-weight: normal;
     width: 388px;
     left: 64px;
     bottom: 30px;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
+    margin: 0;
+    padding: 0;
 }
-    
+
 .header__square-pic {
     background-color: #2f80ed;
     position: absolute;
@@ -69,110 +80,115 @@
     display: inline;
     width: 568px;
     height: 568px;
-    z-index: -1;
 }
 
 .description {
     display: flex;
-    background-color:white;
+    background-color: white;
 }
-    
-.two-columns{
+
+.two-columns {
     width: 80%;
-    justify-content:space-between;
+    justify-content: space-between;
     display: flex;
     align-items: baseline;
     margin: 100px auto 100px auto;
 }
 
-.two-columns__brief{
+.two-columns__brief {
     line-height: 1.2em;
     font-size: 18px;
     font-weight: normal;
     color: #2f80ed;
     width: 175px;
+    margin: 0;
+    padding: 0;
 }
 
-.two-columns__main-text{
-   width: 80%;
-   min-width: 784px;
-   line-height: 34px;
-   font-size: 24px;
-   font-weight: normal;
+.two-columns__main-text {
+    width: 80%;
+    min-width: 784px;
+
 }
 
-.two-columns__paragraph{
-    margin-top: 30px;
+.two-columns__paragraph {
+    margin: 0 0 30px;
+    line-height: 34px;
+    font-size: 24px;
+    font-weight: normal;
 }
 
-.two-columns__span-accent{
+.two-columns__paragraph:last-child {
+    margin-bottom: 0;
+}
+
+.two-columns__span-accent {
     line-height: 34px;
     font-size: 24px;
     font-weight: 600;
-    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-top: 0;
 }
 
-.digits{
+.digits {
     overflow: hidden;
     display: block;
-    background-color:white;
+    background-color: white;
 }
 
-.section-title{
+.section-title {
     line-height: 1.15em;
     font-size: 60px;
     font-weight: 600;
     width: 60%;
-    margin:0 auto;
-    text-align:center;    
+    margin: 0 auto;
+    text-align: center;
 }
 
-.section-subtitle{
+.section-subtitle {
     line-height: 34px;
     font-size: 24px;
     font-weight: normal;
     width: 60%;
-    margin:20px auto 0 auto;
-    text-align:center;
+    margin: 20px auto 0 auto;
+    text-align: center;
 }
 
-.table{
+.table {
     width: 1100px;
     display: flex;
     margin: 0 auto 100px auto;
     flex-wrap: wrap;
     justify-content: space-between;
     list-style: none;
-   }
+    padding: 0;
+}
 
-.table__cell{
+.table__cell {
     width: 250px;
-    margin-top: 60px;     
+    margin-top: 60px;
 }
 
-.table__heading{
+.table__heading {
     line-height: 1.15em;
-    font-size:24px;
+    font-size: 24px;
     font-weight: 600;
-    margin:0 auto 20px 0;
+    margin: 0 auto 20px 0;
 }
 
-.table__text{
+.table__text {
     line-height: 1.2em;
-    font-size:18px;
+    font-size: 18px;
     font-weight: normal;
-    margin:0;
+    margin: 0;
+    margin-top: 20px;
 }
 
- .text{
-    margin-top: 20px;
- }
-
- .feynman {
-    background-color:#f2f2f2;
+.feynman {
+    background-color: #f2f2f2;
     display: flex;
     flex-direction: column;
-    height: 890px;
+    min-height: 890px;
     margin-top: 0;
     position: relative;
 }
@@ -184,38 +200,38 @@
     font-size: 120px;
     font-weight: 600;
     z-index: 1;
-    margin: 0 auto 70px;  
+    margin: 100px auto 70px;
 }
 
-  .feynman__subtitle {
+.feynman__subtitle {
     line-height: 51px;
     font-size: 36px;
     font-weight: normal;
     text-align: center;
-    margin:0 auto;
-    z-index: 1;     
+    margin: 0 auto;
+    z-index: 1;
 }
-  
-  .feynman__link {
+
+.feynman__link {
     top: 50%;
-    margin-left: 48px;
     line-height: 51px;
     font-size: 36px;
     font-weight: normal;
-    color:#2f80ed;
+    color: #2f80ed;
     position: absolute;
     right: 48px;
+    text-decoration: none;
 }
 
 .feynman__image {
     width: 867px;
-    height:637px;
+    height: 637px;
     position: absolute;
     bottom: 0;
-    left:0;
+    left: 0;
 }
 
-.kaufman{
+.kaufman {
     background-color: #1f1f1f;
     overflow: hidden;
     color: white;
@@ -223,19 +239,18 @@
     z-index: 1;
     padding-bottom: 90px;
     padding-top: 90px;
-   
 }
 
-.table_theme_dark{
-    margin:0 auto;
+.table_theme_dark {
+    margin: 0 auto;
 }
 
-.table__cell_theme_dark{
+.table__cell_theme_dark {
     width: 200px;
-    margin-top:80px;
+    margin-top: 80px;
 }
 
-.kaufman__triangle{
+.kaufman__triangle {
     background-image: url(./images/kaufman-triangle.svg);
     background-size: cover;
     position: absolute;
@@ -246,87 +261,73 @@
     z-index: -1;
 }
 
-.footer{
+.footer {
     background-color: #1f1f1f;
     min-height: 350px;
-    color:white;
+    color: white;
     display: flex;
 }
 
-.footer__columns{
+.footer__columns {
     display: flex;
     margin: 60px auto 40px auto;
     width: 90%;
     justify-content: space-between;
-    position: relative; 
+    position: relative;
 }
 
-.footer__column_content_copyright{
+.footer__column_content_copyright {
     flex-basis: 711px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.logo_place_footer{
+.logo_place_footer {
     background-image: url(./images/logo_place_footer.svg);
-    position: absolute;
     left: 0px;
     top: 0px;
     z-index: 1;
     background-repeat: no-repeat;
 }
 
-.footer__author{
+.footer__author {
     line-height: 25px;
     font-size: 18px;
     font-weight: normal;
-    position: absolute;
-    left:0;
+    left: 0;
     bottom: 0;
     margin: 18px 0 18px;
 }
 
-.footer__column-heading{
+.footer__column-heading {
     line-height: 30px;
     font-size: 18px;
     font-weight: 600;
     color: white;
-    margin-top: 0;
+    margin: 0;
 }
 
-.footer__column-links{
+.footer__column-links {
     margin: 20px 0 16px 0;
     list-style: none;
     padding-left: 0;
     top: 0;
 }
 
-.footer__list-links{
+.footer__list-item {
     line-height: 30px;
     font-size: 18px;
     font-weight: normal;
 }
 
-.footer__column-link{
+.footer__column-link {
     color: white;
     text-decoration: none;
 }
 
-.footer__column-link_YT{
-   margin-right: 10px;
-   width: 16px;
-   height: 16px;
-}
-
-.footer__column-link_VK{
+.footer__social-icon {
     margin-right: 10px;
     width: 16px;
-    height: 16px; 
-}
-
-.footer__column-link_TT{
-    margin-right: 10px;
-    width: 16px;
-    height: 16px; 
+    height: 16px;
 }
