--- a/style.css
+++ b/style.css
@@ -1,11 +1,19 @@
-.page {
+@keyframes rotation{
+    from {
+          transform: rotate(0deg);
+      }
+      to {
+          transform: rotate(360deg);
+      }
+  }
+
+  .page {
     min-width: 1100px;
     max-width: 1600px;
     font-family: 'Helvetica Neue', 'Arial', sans-serif;
     margin: 0 auto;
 }
-
-.header {
+  .header {
     min-height: 600px;
     max-height: 756px;
     display: flex;
@@ -17,29 +25,7 @@
     background-color: #f2f2f2;
 
 }
-
-.header__link {
-    text-decoration: none;
-    color: #2f80ed;
-}
-
-
-.logo {
-    height: 32px;
-    width: 228px;
-}
-
-.logo_place_header {
-    background-image: url(./images/logo_place_header.svg);
-    position: absolute;
-    left: 64px;
-    top: 30px;
-    z-index: 1;
-    background-repeat: no-repeat;
-
-}
-
-.header__title {
+  .header__title {
     line-height: 96px;
     font-size: 102px;
     font-weight: 600;
@@ -47,16 +33,6 @@
     z-index: 2;
     margin: 0 0 0 64px;
     padding: 0;
-
-}
-
-.header__main-illustration {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    width: 765px;
-    height: 608px;
-    z-index: 1;
 }
 
 .header__subtitle {
@@ -72,6 +48,26 @@
     padding: 0;
 }
 
+.header__link {
+    text-decoration: none;
+    color: #2f80ed;
+}
+
+.link:hover{
+    opacity: .2;
+    transition: .40s;
+}
+
+
+.header__main-illustration {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 765px;
+    height: 608px;
+    z-index: 1;
+}
+
 .header__square-pic {
     background-color: #2f80ed;
     position: absolute;
@@ -80,11 +76,30 @@
     display: inline;
     width: 568px;
     height: 568px;
+    line-height: 34px;
+    font-size: 24px;
+    animation: rotation 20s infinite linear;
+}
+
+.logo {
+    height: 32px;
+    width: 228px;
+}
+
+.logo_place_header {
+    background-image: url(./images/logo/logo_place_header.svg);
+    position: absolute;
+    left: 64px;
+    top: 30px;
+    z-index: 1;
+    background-repeat: no-repeat;
+
 }
 
 .description {
     display: flex;
     background-color: white;
+    padding-top: 100px;
 }
 
 .two-columns {
@@ -92,7 +107,11 @@
     justify-content: space-between;
     display: flex;
     align-items: baseline;
-    margin: 100px auto 100px auto;
+    margin: 0 auto 0 auto;
+}
+
+.two-columns:nth-child(2) {
+    margin: 0;
 }
 
 .two-columns__brief {
@@ -130,10 +149,93 @@
     margin-top: 0;
 }
 
+.techniques {
+    width: 80%;
+    margin: 0 auto;
+    padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cards{
+    width: 920px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    list-style: none;
+    padding: 0;
+}
+
+.cards__item {
+    width: 240px;
+    margin-right: 100px;
+    padding: 0;
+    box-sizing: border-box;
+   
+}
+.cards__item:nth-child(3){
+    margin-right: 0;
+}
+
+.cards__title{
+    line-height: 1.15em;
+    font-size: 24px;
+    font-weight: 600;
+    margin: 0 auto 16px;
+    text-align: center;
+}
+
+.cards__description{
+    line-height: 23px;
+    font-size: 18px;
+    font-weight: normal;
+    text-align: center;    
+    margin:0;
+   
+}
+
+.cards__image {
+    width: 160px;
+    height: 160px;
+    border-radius: 80px;
+    margin: 60px 40px 43px 40px;
+}
+
+.video {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+    margin-bottom: -60px;
+}
+
+.video__iframes {
+    margin-top: 50px;
+    border: 0;
+}
+
+.video__iframe {
+    width: 515px;
+    height: 315px;
+    margin-right: 20px;
+}
+
+iframe:nth-child(2) {
+    margin-right: 0;
+}
+
+.oakley{
+    padding-top: 160px;
+    background-color: #f2f2f2;
+
+}
+
 .digits {
     overflow: hidden;
     display: block;
     background-color: white;
+    padding-top: 100px;
 }
 
 .section-title {
@@ -189,7 +291,7 @@
     display: flex;
     flex-direction: column;
     min-height: 890px;
-    margin-top: 0;
+   
     position: relative;
 }
 
@@ -231,6 +333,75 @@
     left: 0;
 }
 
+.khan{
+    padding-top: 105px;
+    margin: 0 auto;
+    display: flex;
+    background-color: #f2f2f2;
+}
+
+.khan__container{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+}
+
+.khan__author{
+    line-height: 42px;
+    font-size: 30px;
+    font-weight: normal; 
+    margin: 0;  
+}
+.khan__title{
+    line-height: 1.15em;
+    font-size: 60px;
+    font-weight: 600;
+    margin: 0; 
+}
+
+.khan__quote{
+    width: 790px;
+    line-height: 34px;
+    font-size: 24px;
+    font-weight: normal;
+    margin: 50px auto 36px 0;
+}
+.khan__quote-author{
+    line-height: 1.15em;
+    font-size: 24px;
+    font-weight: 600; 
+    margin: 0 0 10px 0;
+}
+.khan__quote-author-subline{
+    line-height: 1.15em;
+    font-size: 24px;
+    font-weight: normal;
+    margin: 0;   
+}
+.khan__book-container{
+    margin-top: 68px;
+    position: relative;
+}
+.book-pic{
+    width: 620px;
+    height: 608px;
+    object-fit: cover;
+    object-position: top;
+ }
+
+.khan__buy-link{
+    text-decoration: none;
+    color: #2f80ed;
+    line-height: 42px;
+    font-size: 30px;
+    font-weight: normal;
+    margin-left: 48px;
+    position: absolute;
+    top:0;
+    
+
+}
 .kaufman {
     background-color: #1f1f1f;
     overflow: hidden;
@@ -259,7 +430,29 @@
     right: -210px;
     top: 0;
     z-index: -1;
+    animation: rotation 20s infinite linear;
 }
+
+.resources{
+    padding-top: 100px;
+    padding-bottom: 217px;
+    margin: 0 auto;
+}
+
+.resources__logo-zone{
+    width: 1100px;
+    margin: 80px auto 0 auto;
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+   justify-content: center;
+}
+
+.resources__logo{
+    width: 270px;
+    height: 38px;
+}
+
 
 .footer {
     background-color: #1f1f1f;
@@ -284,7 +477,7 @@
 }
 
 .logo_place_footer {
-    background-image: url(./images/logo_place_footer.svg);
+    background-image: url(./images/logo/logo_place_footer.svg);
     left: 0px;
     top: 0px;
     z-index: 1;
