правки после ревью

--- a/blocks/khan/__book-container/khan__book-container.css
+++ b/blocks/khan/__book-container/khan__book-container.css
@@ -1,4 +1,6 @@
 .khan__book-container {
     margin-top: 68px;
-    position: relative;
+    display: grid;
+    grid-template-columns: 620px 630px;
+   
 }
